# my_cmd

./: .gitignore  README.md  my_init.ps1  my_init.sh  push_my_cmd.bat
ahk_scipt/: main.ahk  test.ahk
ahk_script/: .gitignore  check_exist.ahk  galgame_key.ahk  main.ahk  readme.md  run_minimize.ahk  test.ahk
feud_script/: app_command.py  pyproject.toml
just_script/: demo.just
mprocs/: mprocs.yaml  sample_wsgidav.yaml  test.bat
nushell_script/: demo.nu
powershell_script/: active_windows_keyboard.ps1  clash_control.ps1  clash_yacd.ps1  my_init.ps1  run-ps.vbs  run_alist.ps1  run_cat.ps1  run_clash.ps1  run_clash_providers.ps1  run_ftp.ps1  run_ftp2.ps1  run_minimize.ahk  run_minimize.ps1  run_mprocs.ps1  run_player.ps1  run_subcovert.ps1  run_sync_note.ps1  run_webdav.ps1  run_webdav2.ps1  run_webdav_config.ps1  run_wt_mprocs.bat  run_wt_mprocs.ps1  run_wt_powershell.bat  run_wt_powershell.ps1  subcovert.ps1  test.ps1  tool.ps1
python_script/: .pdm-python  .pdm.toml  README.md  main.py  output.txt  pyproject.toml  run_command.py  run_command_simple_fire.py  simple_fire.py  test.py  test4.py  test_fire.py  tool.py
python_script/arguably_demo/: run_ypa.py
python_script/prompt_toolkit_demo/: command.py  config_command.py  config_list.py  config_tree.py  config_tree_test.py  get_tree.py  mian.py  readme.md  test.py  tool_list.py  tool_tree.py
python_script/py_simple_fire/: run_ffmpeg.py  run_lw.py  run_mzf.py  run_tool.py  run_ypa.py  simple_fire.py  tool.py
script/: clash_control.ps1  clash_yacd.ps1  run_clash.ps1  run_ftp.lnk  run_ftp_server.bat  (+3 more)
(+36 files in other folders)
