[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hxse", email = "narutohy@163.com"},
]
dependencies = [
    "pickpack>=1.0.0",
    "textual[dev]>=0.10.0",
    "prompt-toolkit>=3.0.36",
    "pypinyin>=0.48.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
