[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pdbp>=1.4.3",
    "pdbr>=0.8.5",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hxse", email = "narutohy@163.com"},
]
dependencies = [
    "prompt-toolkit>=3.0.36",
    "pypinyin>=0.48.0",
    "fire>=0.5.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
